k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ubicar-tcp-handler-service
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: ubicar-tcp-handler-service
  ports:
    - protocol: TCP
      port: 7011
      targetPort: 7011
